# curve

./: .gitignore  README.md  Server  Server.hi  Server.hs  curve.cabal  server.cabal
scripts/: run-client  run-server
scripts/msg/: CMsgHello  MsgTime
src/: CurveClient.hs  CurveServer.hs  TestSuite.hs
src/Curve/: Client.hs  Misc.hs  Network.hs  Server.hs  Types.hs
src/Curve/Client/: Client.hs  Timer.hs  Types.hs
src/Curve/Client/Render/: GLTypes.hs  MyVaoBall.hs  MyVaoPaddle.hs  MyVaoWall.hs  Renderer.hs
src/Curve/Client/Render/Shader/: HelloWorld.fs  HelloWorld.vs
src/Curve/Game/: Ball.hs  BallDirection.hs  Math.hs  Message.hs  Misc.hs  Network.hs  Paddle.hs  Player.hs  Timer.hs  Types.hs  Utils.hs  Wall.hs  World.hs
src/Curve/Network/: Network.hs  Types.hs
src/Curve/Server/: ClientHandle.hs  ClientMap.hs  Env.hs  Misc.hs  PlayerMap.hs  Server.hs  Timer.hs  Types.hs
src/Test/Client/: Client.hs
src/Test/Game/: Ball.hs  Network.hs
src/Test/Network/: Network.hs
